Add logout functionality.

--- a/views/chatroom.ejs
+++ b/views/chatroom.ejs
@@ -15,7 +15,7 @@
             <div class="userPicHolder"><img src="./img/user.jpg" alt="John Doe"></div>
             <p class="userName">John Doe</p>
             <a href="rooms.html" id="roomsBtn">Rooms</a>
-            <a href="login.html" id="logOutBtn">Logout</a>
+            <a href="/logout" id="logOutBtn">Logout</a>
         </div>
         <div class="chatListDiv">
             <div class="chatMessagesPanel">
