--- a/views/rooms.ejs
+++ b/views/rooms.ejs
@@ -5,6 +5,29 @@
     <title>ChatCat - Rooms</title>
     <link rel="stylesheet" href="/css/roomsStyles.css">
     <script src="/js/jquery-2.1.4.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+    $(() => {
+        let socket = io('<%= host %>' + '/roomslist');
+
+        let renderChatRooms = chatrooms => {
+            let roomsListDiv = $('#roomsListUL');
+            let listStr = '';
+            for(let cat of chatrooms) {
+                listStr += `<a href="/chat/${cat.roomID}"><li>${cat.room}</li></a>`
+            }
+            roomsListDiv.html('').append(listStr);
+        }
+
+        // Get a list of chatRooms
+        socket.emit('getChatrooms');
+
+        // Event listener for chatRoomsList
+        socket.on('chatRoomsList', chatrooms => {
+            renderChatRooms(JSON.parse(chatrooms));
+        });
+    });
+    </script>
 </head>
 <body>
     <div class="container">
