--- a/views/chatroom.ejs
+++ b/views/chatroom.ejs
@@ -5,14 +5,39 @@
     <title>ChatCat - Topic Goes Here</title>
     <link rel="stylesheet" href="/css/chatroomStyles.css">
     <script src="/js/jquery-2.1.4.min.js"></script>
-    <script src='/socket.io/socket.io.js'><script>
+    <script src="/socket.io/socket.io.js"></script>
     <script>
     'use strict';
     $(() => {
         let socket = io('<%= host %>' + '/chatter');
         let roomID = '<%= roomID %>';
         let user = '<%= user.fullName %>';
-        let userpic = '<%= user.profilePic %>';
+        let userPic = '<%= user.profilePic %>';
+        let chatUsers = $('.chatUsers');
+
+        socket.on('connect', () => {
+            socket.emit('join', {
+                roomID,
+                user,
+                userPic
+            });
+        });
+
+        let userList = user => {
+            return `<div class="userBlock">
+                <div class="userPic"><img src="${user.userPic}" alt="${user.user}"></div>
+                <div class="cuserName">${user.user}</div>
+            </div>`
+        }
+
+        socket.on('updateUsersList', data => {
+            let parsedData = JSON.parse(data);
+            let usersListData = '';
+            for(let user of parsedData) {
+                usersListData += userList(user);
+            }
+            chatUsers.html('').html(usersListData);
+        });
     });
     </script>
 </head>
