--- a/views/chatroom.ejs
+++ b/views/chatroom.ejs
@@ -14,6 +14,8 @@
         let user = '<%= user.fullName %>';
         let userPic = '<%= user.profilePic %>';
         let chatUsers = $('.chatUsers');
+        let chatInput = $("input[name='userInput']");
+        let chatMessageDiv = $('.chatMessages');
 
         socket.on('connect', () => {
             socket.emit('join', {
@@ -26,7 +28,7 @@
         let userList = user => {
             return `<div class="userBlock">
                 <div class="userPic"><img src="${user.userPic}" alt="${user.user}"></div>
-                <div class="cuserName">${user.user}</div>
+                <div class="userName">${user.user}</div>
             </div>`
         }
 
@@ -37,6 +39,37 @@
                 usersListData += userList(user);
             }
             chatUsers.html('').html(usersListData);
+        });
+
+        let updateFeed = (userPic, message) => {
+            let template = `<div class="chatBlock">
+                                <div class="userPic"><img src="${userPic}"></div>
+                                <div class="chatMsg">${message}</div>
+                            </div>`;
+
+            $(template).hide().prependTo(chatMessageDiv).slideDown(200);
+        }
+
+        chatInput.on('keyup', function(evt) {
+            evt.preventDefault();
+            let messageFld = $(this);
+            if (evt.which === 13 && messageFld.val() !== '') {
+                socket.emit('newMessage', {
+                    roomID,
+                    user,
+                    userPic,
+                    message: messageFld.val()
+                });
+                // Update the local feed
+                updateFeed(userPic, messageFld.val());
+                messageFld.val('');
+            }
+        });
+
+        socket.on('inMessage', data => {
+            let parsedData = JSON.parse(data);
+
+            updateFeed(parsedData.userPic, parsedData.message);
         });
     });
     </script>
@@ -56,10 +89,7 @@
             <div class="chatMessagesPanel">
                 <div class="chatMessages">
                 <!-- Loop this for chat messages -->
-                <div class="chatBlock">
-                    <div class="userPic"><img src="/img/user.jpg"></div>
-                    <div class="chatMsg">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti perferendis eius aut nesciunt necessitatibus ad nulla, qui sequi, id nam. Possimus odit aut nisi veritatis amet distinctio id officiis ipsam!</div>
-                </div>
+
                 <!-- loop end -->
                 </div>
                 <div class="typePanel">
