Add photo uploading functionality.

--- a/views/chatroom.ejs
+++ b/views/chatroom.ejs
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/css/chatroomStyles.css">
     <script src="/js/jquery-2.1.4.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
+    <script src="https://widget.cloudinary.com/global/all.js"></script>
     <script>
     'use strict';
     $(() => {
@@ -16,6 +17,7 @@
         let chatUsers = $('.chatUsers');
         let chatInput = $("input[name='userInput']");
         let chatMessageDiv = $('.chatMessages');
+        let filePicker = $('#uploadFile');
 
         socket.on('connect', () => {
             socket.emit('join', {
@@ -71,6 +73,28 @@
 
             updateFeed(parsedData.userPic, parsedData.message);
         });
+
+        filePicker.on('click', function(evt) {
+            cloudinary.openUploadWidget({
+                cloud_name: 'dd0urmrcg',
+                upload_preset: 'ypdlbekp'
+            }, (error, result) => {
+                if (!error) {
+                    let tmp = '';
+                    for (let img of result) {
+                        tmp += `<img src="${img.url}">`
+                    }
+                    updateFeed(userPic, tmp);
+
+                    socket.emit('newMessage', {
+                        roomID,
+                        user,
+                        userPic,
+                        message: tmp
+                    })
+                }
+            });
+        })
     });
     </script>
 </head>
